--- a/public_projects/COVID_Emails/index.html
+++ b/public_projects/COVID_Emails/index.html
@@ -1,24 +1,38 @@
-
 <!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Yale's COVID Emails</title>
-  <meta name="description" content="Making a Bubble chart using D3v4. Based on Jim Vallandingham's work, based on a NYT visualization.">
+  <title>Yale Daily News | The Oldest College Daily</title>
+  <meta name="description" content="How did Yale talk about COVID?">
   <meta name="author" content="Leon Lufkin">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="src/tooltip.js"></script>
+  <script src="src/quotes.js"></script>
+  <script type="text/javascript" src="data/topN_quotes.json"></script>
+  <script src="src/bubble_chart.js"></script>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/bubble_chart.css">
 </head>
 <body>
+  <a href="http://yaledailynews.com" target="_blank"><img src="ydn_logo.gif" class="ydn-logo"></a>
+  <div class="row narrow article-info">
+    <h1>How Yale talked about COVID</h1>
+    <p class="subtitle">The words admin and HOCs used to talk to students about the pandemic</p>
+    <p class="byline">Analysis by Leon Lufkin</p>
+  </div>
+  <div class="row narrow article-text">
+    <p>As the semester comes to a close, the pandemic seems to be nearing its end too. Vaccines are going into people's arms and a return to normal life is on the horizon.</p>
+    <p>Here, we take a look at how Yale's heads of college (HOCs) and adminstrators talked to students about this defining moment in history.
+      <!-- Soon enough, the pandemic will be history.  -->
+      <!-- like President Salovey, Provost Strovel, and Dr. Stephanie Spangler wrote to students about COVID-19.  -->
+      We gathered all the emails they've sent since the start of the pandemic to analyze the words they used. </p>
+    <p>Words on the left were used more frequently by HOCs, and those on the right were used more by administrators.</p>
+    <p><strong>Hover over a word to get started!</strong></p>
+  </div>
   <div class="container">
-    <h1>Bubbles</h1>
-    <div id="toolbar">
-      <a href="#" id="all" class="button">all emails</a>
-      <a href="#" id="HOCsadmin" class="button active">HOCs / admin</a>
-    </div>
     <div id="vis"></div>
     <div id="quotes">
       <div class="row">
@@ -26,21 +40,17 @@
         <div class="column"></div>
       </div>
     </div>
-
-    <div class="footer">
-      <p>Yale COVID Emails</p>
-      <strong>Made by Leon + ?</strong>
-      <p><a href="http://vallandingham.me/bubble_charts_with_d3v4.html">YDN link?</a> | <a href="https://github.com/vlandham/bubble_chart_v4">Code</a></p>
-    </div>
   </div>
 
-  <!-- <script src="main.js"></script> -->
-  <!--   <script src="//d3js.org/d3.v4.min.js"></script> -->
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="src/tooltip.js"></script>
-  <script src="src/quotes.js"></script>
-  <script type="text/javascript" src="data/top100_quotes.json"></script>
-  <script src="src/bubble_chart_custom.js"></script>
+  <div class="row narrow">
+    <div class="about">
+        <h3>About this project</h3>
+        <p><strong>This is a project of the Yale Daily News Data Desk, one of the newest desks that aims to bring data-driven journalism to the News.</strong></p>
+        <p>The News gathered 48 emails sent by administrators and HOCs from each of the 14 colleges since the start of the pandemic. These emails were analyzed in R to identify common words and compare their usage. Email <a href="mailto:leon.lufkin@yale.edu">Leon Lufkin</a> if you think we missed any!</p>
+        <p>You can find our scripts, code, and cleaned dataset on <a href="https://github.com/ydntech/ydn-data/tree/master/projects_2021/COVID_Emails" target="_blank">GitHub</a>.</p>
+        <p>Credits to <a href="https://vallandingham.me">Jim Vallandingham</a>'s bubble chart guide.</p>
+    </div>
+  </div>
 
 </body>
 </html>
