--- a/public_projects/COVID_Emails/index.html
+++ b/public_projects/COVID_Emails/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Yale Daily News | The Oldest College Daily</title>
-  <meta name="description" content="How did Yale talk about COVID?">
+  <meta name="description" content="An analysis of how Yale's HOCs and administrators communicated to students about COVID-19">
   <meta name="author" content="Leon Lufkin">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -19,7 +19,7 @@
 <body>
   <a href="http://yaledailynews.com" target="_blank"><img src="ydn_logo.gif" class="ydn-logo"></a>
   <div class="row narrow article-info">
-    <h1>How Yale talked about COVID</h1>
+    <h1>How Yale talked about COVID-19</h1>
     <p class="subtitle">The words admin and HOCs used to talk to students about the pandemic</p>
     <p class="byline">Analysis by Leon Lufkin</p>
   </div>
