--- a/public_projects/COVID_Emails/index.html
+++ b/public_projects/COVID_Emails/index.html
@@ -20,7 +20,7 @@
   <a href="http://yaledailynews.com" target="_blank"><img src="ydn_logo.gif" class="ydn-logo"></a>
   <div class="row narrow article-info">
     <h1>How Yale talked about COVID-19</h1>
-    <p class="subtitle">The words admin and HOCs used to talk to students about the pandemic</p>
+    <p class="subtitle">The words administrators and HOCs used to talk to students about the pandemic</p>
     <p class="byline">Analysis by Leon Lufkin</p>
   </div>
   <div class="row narrow article-text">
@@ -28,7 +28,7 @@
     <p>Here, we take a look at how Yale's heads of college (HOCs) and adminstrators talked to students about this defining moment in history.
       <!-- Soon enough, the pandemic will be history.  -->
       <!-- like President Salovey, Provost Strovel, and Dr. Stephanie Spangler wrote to students about COVID-19.  -->
-      We gathered all the emails they've sent since the start of the pandemic to analyze the words they used. </p>
+      We gathered a collection of the emails they've sent since the start of the pandemic to analyze the words they used. </p>
     <p>Words on the left were used more frequently by HOCs, and those on the right were used more by administrators.</p>
     <p><strong>Hover over a word to get started!</strong></p>
   </div>
@@ -46,7 +46,7 @@
     <div class="about">
         <h3>About this project</h3>
         <p><strong>This is a project of the Yale Daily News Data Desk, one of the newest desks that aims to bring data-driven journalism to the News.</strong></p>
-        <p>The News gathered 48 emails sent by administrators and HOCs from each of the 14 colleges since the start of the pandemic. These emails were analyzed in R to identify common words and compare their usage. Email <a href="mailto:leon.lufkin@yale.edu">Leon Lufkin</a> if you think we missed any!</p>
+        <p>The News gathered 48 emails sent by administrators and HOCs from each of the 14 colleges since the start of the pandemic. We analyzed these emails in R to identify common words and compare their usage. Email <a href="mailto:leon.lufkin@yale.edu">Leon Lufkin</a> if you think we missed any!</p>
         <p>You can find our scripts, code, and cleaned dataset on <a href="https://github.com/ydntech/ydn-data/tree/master/projects_2021/COVID_Emails" target="_blank">GitHub</a>.</p>
         <p>Credits to <a href="https://vallandingham.me">Jim Vallandingham</a>'s bubble chart guide.</p>
     </div>
