Fixes from edit

--- a/public_projects/COVID_Emails/index.html
+++ b/public_projects/COVID_Emails/index.html
@@ -30,7 +30,7 @@
       <!-- like President Salovey, Provost Strovel, and Dr. Stephanie Spangler wrote to students about COVID-19.  -->
       We gathered a collection of the emails they've sent since the start of the pandemic to analyze the words they used. </p>
     <p>Words on the left were used more frequently by HOCs, and those on the right were used more by administrators.</p>
-    <p><strong>Hover over a word to get started!</strong></p>
+    <p><strong>Click on a word to get started!</strong></p>
   </div>
   <div class="container">
     <div id="vis"></div>
